--- a/google-homepage/index.html
+++ b/google-homepage/index.html
@@ -30,7 +30,7 @@
                 <img src="https://web.archive.org/web/20191130234759im_/https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">
                 <input type="text">
                 <div class="search_buttons">
-                    <button class="btn-grey">Google Search</button>
+                    <button class="btn-grey"><a href="search.html">Search</a></button>
                     <button class="btn-grey">I'm Feeling Lucky</button>
                 </div>
             </div>
